# Crimenes-de-San-Francisco-analisis-estadistico

./: .gitignore  README.md  mlflow-diab_ML.py  mlflow.db  pyproject.toml
.dvc/: config
data/: test.csv.dvc  train.csv.dvc
dev/notebooks/: sf_crime_eda.ipynb
notebooks/: sf-crime-clasificacion.ipynb
package-src/sfcrime_model/: __init__.py  config.yml  train.py
package-src/sfcrime_model/config/: core.py
package-src/sfcrime_model/processing/: data_manager.py
requirements/: requirements.txt
tests/: test_prediction.py
ui/: .env.example
ui/app/: Home.py  settings.py
ui/app/components/: input_form.py  prediction_panel.py  top_nav.py.ori
ui/app/pages/: 1_Información.py
ui/app/predictor/: api_client.py  mock_predictor.py
