[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfcrime-model"
version = "0.1.0"
description = "SF Crime Classification - MLOps project"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "mlflow",
  "pyyaml",
  "joblib",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "package-src"}

[tool.setuptools.packages.find]
where = ["package-src"]

[project.scripts]
sfcrime-train = "sfcrime_model.train:main"
